fix services section spacing

--- a/css/index.css
+++ b/css/index.css
@@ -505,12 +505,16 @@ input::placeholder {
     height: 306px;
   }
 
+  .services__header {
+    padding-bottom: 13px;
+  }
+
   .services__paragraph {
     margin: 0 auto;
     width: 100%;
-    letter-spacing: -0.38px;
+    letter-spacing: -0.12px;
     font-size: 15px;
-    line-height: 1.5;
+    line-height: 1.7;
   }
 
   /* Tablet services sections ends here */
@@ -640,7 +644,6 @@ input::placeholder {
 /* Desktop design starts here */
 
 @media (min-width: 1440px) {
-
   /* Top buble decoration starts here*/
 
   .page-top::before {
